2010-05-19  U-givre\zender  <zender@uci.edu>

	* Fix Makefile.old for libnco_c++.a build on Cygwin

2010-05-03  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.2 release procedure:
 	Changes since nco-4_0_1: namespace, ncatted NUL, fxm
	cd ~/nco;cvs tag -d nco-4_0_2;cvs tag -d nco-4_0_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.2 release"
	cvs tag -c nco-4_0_2;cvs tag -c nco-4_0_2-1

	* Upgrading to Kubuntu 10.04 Lucid Lynx failed, so took a day to
	get NCO running on Cygwin 1.7.5-1 under Vista. Everything was supplied by
	Cygwin:	GSL, or compiled fine from source: netCDF4/HDF5 and Antlr
	(actually antlr-2.7.7 needs #include <cstring> patch to CharScanner.hpp).
	So NCO with DAP, UDUnits2, netCDF4, ncap2 built fine! Amazing. 
	Only problem is executing ncap2, which cannot find java.

2010-05-02  Charlie Zender  <zender@uci.edu>

	* Generate autoconf/libtool sources with Ubuntu 10.04 Lucid Lynx stack

2010-04-29  Charlie Zender  <zender@uci.edu>

	* Clean-up nco_aux.[ch] to work better with WRF files

2010-04-27  Charlie Zender  <zender@uci.edu>

	* Merge Francesco Paolo Lovergine's downstream Debian changes

2010-04-27  Henry Butowsky  <henryb@hush.com> 

	* Added to manual chapter on GSL Random Number generation

2010-04-18  Charlie Zender  <zender@uci.edu>

	* Allow deflation and chunking on both netCDF4 filetypes

	* Warn when attempting to deflate or chunk either netCDF3 filetype

2010-04-09  Charlie Zender  <zender@uci.edu>

	* Fix off-by-one error in ncatted appends for type NC_CHAR (TODO nco985)
	Extra NULs are no longer inserted with each append
	Thanks to A.T. Wittenburg for this bug report

	* Clean-up ncatted to address NUL-append problem

2010-04-08  Charlie Zender  <zender@uci.edu>

	* Namespace patches seem to work with bld/Makefile and with configure.

	* Apply patches from Denis Nadeau to prevent namespace clashes
	between NCO symbols generated by Flex/Bison, and those symbols
	generated by other programs (MPI, netCDF) that also use
	Flex/Bison. 
